--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
+@import '../node_modules/@syncfusion/ej2-material-theme/styles/material.css';
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+:root{
+  /* color*/
+  --main-color:#264653;
+  --secondary-color:#2A9D8F;
+  --yellow-color:#E9C46A;
+  --orange-color:#F4A261;
+  --red-color:#E76F51;
+  --gray:#808080;
+  /* font */
+  --main-font: 'Montserrat', sans-serif;
+  --big-text: 2em;
+  --normal-text:1em;
+  /* border radius */
+  --button-radius:10px;
+  --circle-radius:50%;
+  --card-radius:10px;
+
+}
+/* css reset*/
+body{
+  margin:0;
+  padding:0;
+
+  font-family:var(--main-font);
+}
+.title{
+  font-size:var(--big-text);
+
+}
