--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -5,6 +5,7 @@
   border: 20px solid rgba(255, 255, 255, 0.1);
   border-top-color: var(--main-color);
   animation: spin 1s linear infinite;
+
 }
 
 @keyframes spin {
@@ -25,6 +26,7 @@
   align-items: center;
   position: absolute;
   top: 50%;
+  z-index: 100;
   left: 50%;
   transform: translate(-50%, -50%);
 }
