--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
   --orange-color:#F4A261;
   --red-color:#E76F51;
   --gray:#808080;
+  --page-header:#F1F3F4;
   /* font */
   --main-font: 'Montserrat', sans-serif;
   --big-text: 2em;
@@ -17,14 +18,20 @@
   --button-radius:10px;
   --circle-radius:50%;
   --card-radius:10px;
+  --input-radius:10px;
 
 }
 /* css reset*/
-body{
+body,html{
   margin:0;
   padding:0;
 
-  font-family:var(--main-font);
+}
+
+*{
+
+  font-family:var(--main-font) !important;
+  box-sizing: border-box;
 }
 .title{
   font-size:var(--big-text);
