remove angular material , added create new doc

--- a/src/app/pages/document/components/table/table.component.html
+++ b/src/app/pages/document/components/table/table.component.html
@@ -3,7 +3,7 @@
   <div class="search-container">
     <input placeholder="Tìm kiếm tài liệu" class="search-input" />
   </div>
-  <button>+</button>
+  <button (click)="this.createDocument()">+</button>
 </div>
 <div class="page-content">
   <div class="content-container">
