--- a/src/app/pages/view/components/edit/edit.component.html
+++ b/src/app/pages/view/components/edit/edit.component.html
@@ -1,4 +1,4 @@
-<ejs-richtexteditor  (valueChange)="getContent(currentPage,$event)" [value]="pages[currentPage].content">
+<ejs-richtexteditor  >
 
 </ejs-richtexteditor>
 <button (click)="NextPage()">Next</button>
