--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import '../node_modules/@syncfusion/ej2-material-theme/styles/material.css';
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+
 :root{
   /* color*/
   --main-color:#264653;
@@ -29,8 +30,7 @@ body,html{
 }
 
 *{
-
-  font-family:var(--main-font) !important;
+  font-family:var(--main-font);
   box-sizing: border-box;
 }
 .title{
