--- a/src/app/pages/main/components/login-page/login-page.component.html
+++ b/src/app/pages/main/components/login-page/login-page.component.html
@@ -18,7 +18,7 @@
         <app-loading *ngIf="(this.loginState|async)?.loading" [loadingType]="{message:'Đang đăng nhập',type:'not'}"></app-loading>
         <span class="login-title">ĐĂNG NHẬP</span>
         <br>
-        <mat-form-field appearance="fill" class="input-field">
+        <!-- <mat-form-field appearance="fill" class="input-field">
           <mat-label>Tên đăng nhập</mat-label>
           <input matInput>
         </mat-form-field>
@@ -26,7 +26,7 @@
         <mat-form-field appearance="fill"class="input-field">
           <mat-label>Mật khẩu</mat-label>
           <input matInput>
-        </mat-form-field>
+        </mat-form-field> -->
         <span>Chưa có tài khoản? <a>Đăng ký ngay</a></span>
         <button class="login-button">Đăng nhập</button>
         <button class="login-google-button" (click)="this.login()">Đăng nhập với tài khoản Google</button>
