--- a/src/app/pages/document/document.component.html
+++ b/src/app/pages/document/document.component.html
@@ -1,1 +1,33 @@
-<router-outlet></router-outlet>
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1 class="example-app-name">WORD TOGETHER</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56">
+      <mat-nav-list>
+
+        <div mat-list-item class="header-container">
+          <mat-icon aria-hidden="false" >library_books</mat-icon><span>Tài liệu của tôi</span>
+        </div>
+        <div mat-list-item  class="header-container">
+          <mat-icon aria-hidden="false" >folder shared icon</mat-icon><span>Tài liệu được chia sẻ</span>
+        </div>
+        <div mat-list-item  class="header-container">
+          <mat-icon aria-hidden="false" >star</mat-icon><span>Tài liệu gắn sao</span>
+        </div>
+        <div mat-list-item  class="header-container">
+          <mat-icon aria-hidden="false" >delete</mat-icon><span>Thùng rác</span>
+        </div>
+        <div mat-list-item  class="header-container">
+          <mat-icon aria-hidden="false" >mail</mat-icon><span>Lời mời truy cập</span>
+        </div>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
