--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -3,8 +3,9 @@
   height: 80px;
   border-radius: 50%;
   border: 20px solid rgba(255, 255, 255, 0.1);
-  border-top-color: var(--main-color);
+  border-top-color: var(--secondary-color);
   animation: spin 1s linear infinite;
+
 
 }
 
@@ -18,6 +19,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 .spinnerContainerAbsolute {
   display: flex;
@@ -29,4 +31,5 @@
   z-index: 100;
   left: 50%;
   transform: translate(-50%, -50%);
+
 }
