--- a/src/app/pages/document/components/table/table.component.scss
+++ b/src/app/pages/document/components/table/table.component.scss
@@ -3,16 +3,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5%;
+  padding: 1%;
 }
 
 .search-container {
   width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search-input {
   width: 100%;
-  padding: 5%;
+
   border: none;
   border-radius: var(--input-radius);
 
@@ -60,4 +63,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.add-button{
+  background-color: var(--secondary-color);
 }
