--- a/src/app/pages/document/components/table/table.component.scss
+++ b/src/app/pages/document/components/table/table.component.scss
@@ -23,7 +23,7 @@
 
 .content-container {
   display: grid;
-  margin: 1% 0 0 0;
+  margin: 1% 1% 0 1%;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 0.5%;
 }
