--- a/src/app/pages/document/document.component.html
+++ b/src/app/pages/document/document.component.html
@@ -19,7 +19,8 @@
       fixedTopGap="56">
       <mat-nav-list>
         <div mat-list-item class="header-container"*ngFor="let item of this.menuItems" (click)="navigate(item.link)">
-          <mat-icon aria-hidden="false"  >{{item.icon}}</mat-icon><span>{{item.name}}</span>
+          <mat-icon aria-hidden="false"  *ngIf="this.item.icon!='mail'">{{item.icon}}</mat-icon><span  *ngIf="this.item.icon!='mail'">{{item.name}}</span>
+          <mat-icon  aria-hidden="false" *ngIf="this.item.icon=='mail'" >{{item.icon}}</mat-icon><span matBadge="15" matBadgeColor="warn" *ngIf="this.item.icon=='mail'">{{item.name}}</span>
         </div>
       </mat-nav-list>
     </mat-sidenav>
