--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,4 +1,4 @@
 <div class="status-container">
-  <i class="status-icon"></i>
+  <mat-icon class="status-icon">error</mat-icon>
   <p>{{errorType.message}}</p>
 </div>
