--- a/src/app/components/warning/warning.component.html
+++ b/src/app/components/warning/warning.component.html
@@ -1,1 +1,4 @@
-<p>warning works!</p>
+<div class="status-container">
+  <mat-icon class="status-icon">{{errorType.icon}}</mat-icon>
+  <p>{{errorType.message}}</p>
+</div>
