--- a/src/app/components/error/error.component.scss
+++ b/src/app/components/error/error.component.scss
@@ -3,8 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin:1% 0;
 }
 
-.status-icon {
-  font-size: 4em;
-}
