--- a/src/app/pages/document/components/table/table.component.scss
+++ b/src/app/pages/document/components/table/table.component.scss
@@ -24,8 +24,9 @@
 .content-container {
   display: grid;
   margin: 1% 1% 0 1%;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(minmax(1,4), minmax(100px, 1fr));
   gap: 0.5%;
+
 }
 
 .card-container {
@@ -35,6 +36,12 @@
 }
 .card-container:hover{
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.function-container{
+  display:flex;
+  justify-content: space-between;
+  width: 100%;
+
 }
 
 .icon-container {
